--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bloc: 
   bloc:
   cupertino_icons: ^1.0.2
+  flutter_vibrate: ^1.1.0
 
 dev_dependencies:
   flutter_test:
